--- a/laravel-app/docker/docker-compose.yml
+++ b/laravel-app/docker/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: laravel-app
     restart: unless-stopped
     volumes:
-      - ./:/var/www/html
+      - ../:/var/www/html
     depends_on:
       - db
     environment:
@@ -37,7 +37,7 @@ services:
     ports:
       - "${APP_PORT}:80"
     volumes:
-      - ./:/var/www/html
+      - ../:/var/www/html
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
