--- a/laravel-app/composer.json
+++ b/laravel-app/composer.json
@@ -7,16 +7,21 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "illuminate/collections": "*",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "moneyphp/money": "^4.7",
+        "predis/predis": "^3.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "larastan/larastan": "^3.6",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
+        "phpstan/phpstan": "^2.1",
         "phpunit/phpunit": "^11.5.3"
     },
     "autoload": {
@@ -54,6 +59,13 @@
         "test": [
             "@php artisan config:clear --ansi",
             "@php artisan test"
+        ],
+        "analyse": [
+            "./vendor/bin/phpstan analyse --memory-limit=1G"
+        ],
+        "analyse-clear": [
+            "./vendor/bin/phpstan clear-result-cache",
+            "./vendor/bin/phpstan analyse --memory-limit=1G"
         ]
     },
     "extra": {
