--- a/laravel-app/docker/supervisord.conf
+++ b/laravel-app/docker/supervisord.conf
@@ -1,8 +1,18 @@
 [supervisord]
 nodaemon=true
+logfile=/tmp/supervisord.log
+pidfile=/tmp/supervisord.pid
 
 [program:php-fpm]
 command=php-fpm
 
 [program:nginx]
-command=nginx -g 'daemon off;' 
+command=nginx -g 'daemon off;'
+
+[program:queue-worker]
+command=php /var/www/html/artisan queue:work rabbitmq --queue=notifications --sleep=3 --tries=3 --timeout=90
+numprocs=1
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/tmp/queue-worker.log 
