--- a/laravel-app/docker/Dockerfile
+++ b/laravel-app/docker/Dockerfile
@@ -15,13 +15,7 @@ RUN apt-get update && apt-get install -y \
 
 WORKDIR /var/www/html
 
-# Копируем только файлы для composer (для кеширования слоев)
-COPY composer.json composer.lock ./
-
-# Устанавливаем зависимости (пропускаем скрипты, которые требуют .env)
-RUN composer install --no-dev --optimize-autoloader --no-interaction --prefer-dist --no-scripts
-
-# Копируем остальные файлы
+# Копируем все файлы
 COPY . /var/www/html
 
 # Настраиваем права
