add bcmath in Dockerfile

--- a/laravel-app/docker/Dockerfile
+++ b/laravel-app/docker/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update && apt-get install -y \
     libpq-dev \
     zip \
     unzip \
-    && docker-php-ext-install pdo pdo_pgsql \
+    && docker-php-ext-install pdo pdo_pgsql bcmath \
     && pecl install redis \
     && docker-php-ext-enable redis \
     && apt-get clean \
